--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,1 +1,1 @@
-<div class="_copyright"><span class="_copyright_text">@ {{ site.author | default: site.github.owner_display_name }} {{ "now" | date: "%Y" }}</span></div>
+<div class="_copyright"><span class="_copyright_text">@ {{ site.author | default: site.github.owner_display_name | default:'(unknown)' }} {{ "now" | date: "%Y" }}</span></div>
