--- a/_scss/prime/css/style.scss
+++ b/_scss/prime/css/style.scss
@@ -150,7 +150,7 @@ $dark_pre_bg  : #171717;
 // ---------------------------------------------------------------
 ._dark {
   .highlight {
-    .o,
+    .o,.ow,
     .k,.kd,.kp { color:#dcb }
     .m,
     .kc,
