--- a/_layouts/core-page.html
+++ b/_layouts/core-page.html
@@ -1,8 +1,67 @@
 ---
-layout: core
+layout: raw
+use_pug: true
 ---
-{{ content }}
-<div class="mt-6"></div>
-<hr/>
-<h2>Other pages</h2>
-{% capture pages -%}{% include pages.md %}{%- endcapture %}{{ pages | markdownify }}
+<!DOCTYPE html>
+<!-- path        : {{ page.path }} -->
+<!-- layout      : {{ page.layout }} -->
+<!-- source      : _source/_layouts/core-page.html.pug -->
+<!-- title       : {{ page.title | default: site.title | default: "(untitled)" }} -->
+<!-- description : {{ page.description | default: site.description | default: "(undescribed)" }} -->
+<!-- copyright   : @ {{ site.author | default: site.github.owner_display_name | default:'(unknown)' }} {{ "now" | date: "%Y" }} -->
+<html class="no_js _core_layout" lang="{{ page.lang | default: site.lang | default: 'en-US' }}">
+  <head>
+    <meta charset="{{ site.encoding | default: 'utf-8' }}"/>
+{% seo %}
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta id="_theme_color" name="theme-color" content="{{ page.theme_color | default: site.theme_color | default: '' }}"/>
+    <meta id="_color_scheme" name="color-scheme" content="{{ page.color_scheme | default: site.color_scheme | default: 'light dark' }}"/>
+    <style>.isvg svg { width:1em;height:1em }</style>
+    <link id="_style" rel="stylesheet" href="{{ site.baseurl }}/assets/core/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
+{% include layout_head.html %}
+<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+  </head>
+  <body>
+    <div class="_body_layout _layout">
+      <main class="_view">
+        <div class="_layout _main_layout">
+          <header class="_header">
+            <div class="_layout _header_layout">{%- capture header %}{%- include header.md %}{%- endcapture %}{{ header | markdownify }}
+            </div>
+          </header>
+          <nav class="_nav">
+            <div class="_layout _nav_layout">{%- capture nav %}{%- include nav.md %}{%- endcapture %}{{ nav | markdownify }}
+            </div>
+          </nav>
+          <article class="_article">
+            <div class="_layout _article_layout">{{ content }}
+              <aside>
+                <div class="mt-6"></div>
+                <hr/>
+                <h2>Other pages</h2>{%- capture pages %}{%- include pages.md %}{%- endcapture %}{{ pages | markdownify }}
+              </aside>
+            </div>
+          </article>
+          <footer class="_footer">
+            <div class="_layout _footer_layout">{%- capture footer %}{%- include footer.md %}{%- endcapture %}{{ footer | markdownify }}
+            </div>
+          </footer>
+        </div>
+      </main>
+      <aside class="_view _topbar_view">
+        <div class="_layout _topbar_layout">
+{% include theme_switch.html %}
+        </div>
+      </aside>
+      <aside class="_view _lowbar_view">
+        <div class="_layout _lowbar_layout">
+{% include copyright.html %}
+{% include credit.html %}
+        </div>
+      </aside>
+{% include layout_body.html %}
+      <script>((de=document.documentElement)=>de.className=de.className.replace('no_js','js'))();</script>
+    </div>
+  </body>
+</html>
